--- a/React/finance-app-front/.gitignore
+++ b/React/finance-app-front/.gitignore
@@ -1,8 +1,6 @@
-.venv
-.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-.node_modules
 /node_modules
 /.pnp
 .pnp.js
